--- a/CSS/main.css
+++ b/CSS/main.css
@@ -7,14 +7,15 @@
     font-family: 'Averia Serif Libre', cursive;;
 }
 
+body {
+    background-color: #181818;
+}
+
 /*! Corpo */
 
 main {
-    width: 100vw;
-    height: 100vh;
-    background-image: url(/IMG/background.jpg);
-    background-size: cover;
-    background-position: center;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -76,4 +77,24 @@ main {
 
 .btn:hover {
     background-color: rgb(0, 51, 51);
+}
+
+/*! Caixa das letras */
+
+.box-lyrics {
+    width: 500px;
+    height: auto;
+    padding-top: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    color: white;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.title {
+    text-align: center;
+    color: white;
+    font-size: 1.15rem;
+    margin-bottom: 28px;
 }
