--- a/CSS/main.css
+++ b/CSS/main.css
@@ -66,17 +66,19 @@ main {
 .btn {
     width: 200px;
     height: 45px;
-    background-color: teal;
+    background-color: transparent;
     font-size: 1.1rem;
     border-radius: 5px;
     cursor: pointer;
     border-style: none;
     color: white;
     transition: all 0.5s;
+    border: 2px solid white;
+    outline: none;
 }
 
 .btn:hover {
-    background-color: rgb(0, 51, 51);
+    background-color: teal;
 }
 
 /*! Caixa das letras */
@@ -97,4 +99,8 @@ main {
     color: white;
     font-size: 1.15rem;
     margin-bottom: 28px;
+}
+
+#box-lyrics {
+    margin-top: 15px;
 }
